Attack Steps Section Mobile Fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2378,6 +2378,9 @@ h3 {
   background-color: rgba(96, 124, 190, 0.2);
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+  margin-right: 0;
+  margin-left: 0;
+  max-width: 100%;
 }
 
 @media screen and (min-width: 768px) {
